Refactor authorization facilities & add get problem detail information API.
